--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "colors": "^1.4.0"
+    "colors": "^1.4.0",
+    "network-list": "^1.1.5",
+    "network-speed": "^2.0.7",
+    "nodemailer": "^6.4.13",
+    "read-excel-file": "^4.0.7"
   }
 }
