--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server"
+    "start": "nodemon src/server"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "network-list": "^1.1.5",
     "network-speed": "^2.0.7",
     "nodemailer": "^6.4.13",
+    "nodemon": "^2.0.5",
     "read-excel-file": "^4.0.7"
   }
 }
