--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
+    "express": "^4.17.1",
     "network-list": "^1.1.5",
     "network-speed": "^2.0.7",
     "nodemailer": "^6.4.13",
