--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "network-list": "^1.1.5",
     "network-speed": "^2.0.7",
     "nodemailer": "^6.4.13",
     "nodemon": "^2.0.5",
+    "parseurl": "^1.3.3",
     "read-excel-file": "^4.0.7"
   }
 }
