--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "lru-cache": "^6.0.0",
     "network-list": "^1.1.5",
     "network-speed": "^2.0.7",
     "nodemailer": "^6.4.13",
     "nodemon": "^2.0.5",
+    "nunjucks": "^3.2.2",
     "parseurl": "^1.3.3",
     "read-excel-file": "^4.0.7"
   }
