--- a/package.json
+++ b/package.json
@@ -1,29 +1,27 @@
 {
-  "name": "node7",
+  "name": "nodeproject",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server"
+    "start": "nodemon src/server",
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "colors": "^1.4.0",
-    "cookie-parser": "^1.4.5",
-    "ejs": "^3.1.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "lru-cache": "^6.0.0",
-    "network-list": "^1.1.5",
-    "network-speed": "^2.0.7",
-    "nodemailer": "^6.4.13",
-    "nodemon": "^2.0.5",
+    "mongoose": "^5.11.7",
+    "mysql": "^2.18.1",
     "nunjucks": "^3.2.2",
-    "parseurl": "^1.3.3",
-    "read-excel-file": "^4.0.7"
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^8.2.1",
+    "nodemon": "^2.0.6"
   }
 }
